Styling Fixes
Overflowing <p> tag
"Too Low" text properly formatted
Moved "Request a Set" button lower

--- a/src/styles.css
+++ b/src/styles.css
@@ -275,6 +275,10 @@ svg#clouds {
   width: 1920px;
 }
 
+.designText {
+  width: 100%;
+  max-width: 500px;
+}
 
 
 img {
@@ -289,6 +293,10 @@ img {
 @media screen and (max-width: 767px) {
   .detailWrapper {
     display: block;
+  }
+
+  .designText {
+    width: 100%;
   }
 
   .expandDescription {
